空格，错漏查筛修改

--- a/《中庸》/《中庸》第一章.md
+++ b/《中庸》/《中庸》第一章.md
@@ -4,18 +4,21 @@ date modified:  2024-05-13 08:37
 ---
 # 原文
 天命之谓性[^1]，率性之谓道[^2]，脩道之谓教[^3]。
+
 道也者，不可须臾离也[^4]，可离非道也。是故君子戒慎乎其所不睹[^5]，恐惧乎其所不闻。莫见乎隐[^6]，莫显乎微。故君子慎其独也[^7]。
+
 喜怒哀乐之未发[^8]，谓之中[^9]；发而皆中节[^10]，谓之和[^11]。中也者，天下之大本也；和也者，天下之达道也[^12]。致中和[^13]，天地位焉[^14]，万物育焉[^15]。
 # 笔记
 
 # 题解
-开卷第一章是全书的纲领。朱子认为，这章书是“子思述所传之意 以立言：首明道之本原出于天而不可易，其实体备千己而不可离，次言存养省察之要，终言圣神功化之极。盖欲学者于此反求诸身而自得之，以去夫外诱之私，而充其本然之善，杨氏所谓一篇之体要是也”。全章内容分为三节。第一节首先提出“性”、“道”、“教“三个范畴，用以探求人生从事道德修养和道德教化的哲学原理。第二节指出“道“贯穿于一 切事物之中，“道“不可脱离事物而存在，事物亦不可脱离“道”而存在。 而作为人道，“道”与“人”是完全一体的，不可片刻分离的，因而提出了“慎独”的修养方法。“慎独”的本质即在于修养“诚”的品德，这为后文 深入探讨“诚”的哲学而张本。第三节以调节人性中所固有的喜、怒、哀、乐等感情为根据来阐明中和之道。首先提出了“未发之中“和“中节之和“两个重要命题；然后断言“中”是大本，“和”是达道；最后极力描述“致中和”的功效及其所达到的最高境界。
+开卷第一章是全书的纲领。朱子认为，这章书是“子思述所传之意以立言：首明道之本原出于天而不可易，其实体备千己而不可离，次言存养省察之要，终言圣神功化之极。盖欲学者于此反求诸身而自得之，以去夫外诱之私，而充其本然之善，杨氏所谓一篇之体要是也”。全章内容分为三节。第一节首先提出“性”、“道”、“教”三个范畴，用以探求人生从事道德修养和道德教化的哲学原理。第二节指出“道“贯穿于一切事物之中，“道“不可脱离事物而存在，事物亦不可脱离“道”而存在。而作为人道，“道”与“人”是完全一体的，不可片刻分离的，因而提出了“慎独”的修养方法。“慎独”的本质即在于修养“诚”的品德，这为后文深入探讨“诚”的哲学而张本。第三节以调节人性中所固有的喜、怒、哀、乐等感情为根据来阐明中和之道。首先提出了“未发之中“和“中节之和“两个重要命题；然后断言“中”是大本，“和”是达道；最后极力描述“致中和”的功效及其所达到的最高境界。
 # 译文
-天然赋予人的禀赋叫做“性”，遵循本性自然发展的规律而行动叫 做“道“，把道加以修明并推广于民众叫做“教”。 
+天然赋予人的禀赋叫做“性”，遵循本性自然发展的规律而行动叫做“道“，把道加以修明并推广于民众叫做“教”。
 
-作为道，是人们片刻不可离开的；可以离开的，也就不是道了。正 因为如此，道德高尚的君子在没有人看见的时候也总是谨慎地进行检 点，在没有人听见的地方也总是心怀恐惧，不敢怠慢。没有比处于隐蔽 的时候更容易表现出本色，没有比在细节的事情中更容易显露出真情。 所以，道德高尚的君子总是更加小心谨慎地对待一人独处的时侯。 
+作为道，是人们片刻不可离开的；可以离开的，也就不是道了。正因为如此，道德高尚的君子在没有人看见的时候也总是谨慎地进行检点，在没有人听见的地方也总是心怀恐惧，不敢怠慢。没有比处于隐蔽的时候更容易表现出本色，没有比在细节的事情中更容易显露出真情。所以，道德高尚的君子总是更加小心谨慎地对待一人独处的时侯。
 
-欢喜、愤怒、悲哀、快乐等各种感情还没有表现出来，就叫做“中“; 表现出来时，没有太过和不及，都能恰如其分地符合于自然之理，就叫 做“和＂。所谓“中“，是天下一切道理的最大根本所在；所谓“和“，是天 下一切事物最普遍的规律。能够达到“中和＂的境界，那么天地就可以 各就其位而运行不息，万物便能够各随其性而生长发育了。
+欢喜、愤怒、悲哀、快乐等各种感情还没有表现出来，就叫做“中”;表现出来时，没有太过和不及，都能恰如其分地符合于自然之理，就叫做“和”。所谓“中”，是天下一切道理的最大根本所在；所谓“和”，是天下一切事物最普遍的规律。能够达到“中和”的境界，那么天地就可以各就其位而运行不息，万物便能够各随其性而生长发育了。
+
 # 注释
 [^1]: 天命：自然所赋予的。性：指天然赋予人的禀赋。
 [^2]: 率性：遵循人的自然禀赋。率，遵循、依照、顺从的意思。道：原义为“道路“，引申为“道理”，一般指事物运动变化的普遍规律。《中庸》所讲的道，系兼指天道和人道而言，但主要是指人道。所谓天道，就是宇宙自然运行的客观规律；所谓人道，就是人类社会发展的普遍规律。这里主要是指“性”的外在表现形式而言。
