--- a/《中庸》/《中庸》第九章.md
+++ b/《中庸》/《中庸》第九章.md
@@ -5,7 +5,7 @@
 # 题解
 本章引孔子的话，还是围绕中庸之道难于做到加以申说。孔子用极难做到的三件事，衬托中庸之道看似易行，其实很难，目的仍在于引起人们对中庸之道的重视。天下有些事情看起来很难，但还是能够做到；有些事情看起来容易，但做起来很难。像治国平天下，看起来很难，但还是能够做到；像官位俸禄，看起来难以舍弃，但还是能够舍弃；像尖锐锋利的刀刃，看起来很可怕，但也能鼓起勇气一踩而过。可是要持久地坚守中庸之道，看起来是一件容易的事情，却是难于做到的。
 # 译文
-
+孔子说：“天下和国家是可以平定治理的，爵位和俸禄是可以推辞不受的，明晃晃的锋利刀刃是可以踩踏而过的，但要求符合于中庸之道的标准，则是不容易做到的。”
 # 注释
 
 [^1]: 天下：在古代中国，天下的概念是指天子统治下的全部土地，意为全中国。国家：中国古代所讲的国家不同于今天“国家”一词的含义。国，指天子分封的诸侯国，如鲁国、齐国、郑国等。家，指诸侯分封给卿大夫的家族和封地，即采邑。诸侯的封地和卿大夫的采邑合称为“国家”。均：平定，公平治理。
