--- a/《中庸》/《中庸》第五章.md
+++ b/《中庸》/《中庸》第五章.md
@@ -3,9 +3,10 @@
 # 笔记
 
 # 题解
-本章紧承上章智、愚、贤、不肖者都不能行、不能明中庸之道而来。 人们既巳不能明白中庸之道的真正意义，也就不会去实行它了。因而 记述了孔子担心中庸之道在天下难以实行的慨叹，以阐明圣人所常怀 于心的忧患意识。其作用在于承上启下，以引起下章论舜的话。
-# 译文
+本章紧承上章智、愚、贤、不肖者都不能行、不能明中庸之道而来。人们既巳不能明白中庸之道的真正意义，也就不会去实行它了。因而记述了孔子担心中庸之道在天下难以实行的慨叹，以阐明圣人所常怀于心的忧患意识。其作用在于承上启下，以引起下章论舜的话。
 
+# 译文
+孔子说：“中庸的道理（大家全不明了），大概是不能够实行了啊！”
 # 注释
 
 [^1]: 其：表示大概、恐怕等推测的语气助词。矣夫 (fú) ：表示感叹的 语气助词，相当于现代汉语的“啊”、“啦”等感叹词。
