--- a/《中庸》/《中庸》第六章.md
+++ b/《中庸》/《中庸》第六章.md
@@ -1,12 +1,11 @@
 # 原文
 子曰：“舜其大知也与[^1]！舜好问而好察迩言[^2]，隐恶而扬善，执其两端[^3]，用其中于民[^4]，其斯以为舜乎[^5]！”
-【注
 # 笔记
 
 # 题解
-《中庸》以智、仁、勇三达德为入道之门，故此下数章分别举大舜、颜 渊、子路作为智、仁、勇的代表以论述三达德与中庸之道的关系。本章 首先举大舜为智者的代表，征引孔子之言，论述大舜能够以他的最大智 慧运用中庸之道来治理百姓的事例。
+《中庸》以智、仁、勇三达德为入道之门，故此下数章分别举大舜、颜渊、子路作为智、仁、勇的代表以论述三达德与中庸之道的关系。本章首先举大舜为智者的代表，征引孔子之言，论述大舜能够以他的最大智慧运用中庸之道来治理百姓的事例。
 
-孔子认为，舜之所以能成为“大智“，并不在于显示自己个人的聪明，而在于调动大众的聪明智慧而加以合理运用。他能广泛听取群众 的意见，然后详加分析选择，对于不合理的意见则隐而不宣，对于好的 意见则大加赞扬。由于他如此豁达大度，胸襟宽阔，所以人们都乐于以 善言相告。而于众多善言之中，又能把握住“过“与“不及＂之两端进行 审察，选取其中最合理的方案加以施行。这样，他的政策就毫无过、不 及的偏差而完全合乎中庸之道了。这是合全天下之人的智慧为一身的 智慧，所以称之为“大智＂。这就是舜之所以能成为“大智＂的原因，也是 每个领导者所应取法的经验。
+孔子认为，舜之所以能成为“大智”，并不在于显示自己个人的聪明，而在于调动大众的聪明智慧而加以合理运用。他能广泛听取群众的意见，然后详加分析选择，对于不合理的意见则隐而不宣，对于好的意见则大加赞扬。由于他如此豁达大度，胸襟宽阔，所以人们都乐于以善言相告。而于众多善言之中，又能把握住“过“与“不及”之两端进行审察，选取其中最合理的方案加以施行。这样，他的政策就毫无过、不及的偏差而完全合乎中庸之道了。这是合全天下之人的智慧为一身的智慧，所以称之为“大智”。这就是舜之所以能成为“大智”的原因，也是每个领导者所应取法的经验。
 # 译文
 孔子说：“虞舜可算是一个具有大智慧的聪明人吧！舜喜欢向别人请教，而又善于考察分析浅近平凡的言论；他能够包涵别人的短处，而宣扬人们的善行；他能把握认识上的‘过’和‘不及’这两个方面，而采用最合理的适中办法治理百姓。这就是舜之所以能成为舜的原因吧！”
 # 注释
